-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.3, 5.10.0
-
b6713898a2eb277b7ed8cea0f3c3192124e0bb51
On some cases if you create .dmg file with macdeployqt on High Sierra, it doesn't work on El Capitan. Instead it complains "No Mountable File Systems". The reason is Apple has a new filesystem APFS and during the live-upgrade to High Sierra it will automatically in-place update your filesystem from HFS+ to APFS (on SSD drives). 'hdiutil' is the cmd tool for creating .dmg files. The man page for *hdiutil near option-flag "-srcfolder" reads:
"The filesystem type of the image volume will match that of the source as closely as possible unless overridden with -fs."
Silently updating the filesystem implicitly changes the behavior of hdutil. By default hdiutil and therefore 'macdeployqt' will now write APFS based images. Sierra machines can read APFS but nothing older. Override this behavior and specify the legacy filesystem with: '-fs HFS+'
$ hdiutil create myFoo.dmg -fs HFS+ -srcfolder fooProject/bin/ -format UDZO -volname ProjectFoo
macdeployqt should be updated to take into account these changes.
For Gerrit Dashboard: QTBUG-65844 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
217170,5 | macdeployqt: Implement selection of file system for .dmg file | 5.9 | qt/qttools | Status: MERGED | +2 | 0 |
217173,7 | macOS: update macdeployqt documentation | 5.9 | qt/qtdoc | Status: MERGED | +2 | 0 |